# email-verifier-rust

./: README.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: README.md  index.html
frontend/src/: App.css  App.jsx
frontend/src/components/: ResultsTable.jsx  StatsBar.jsx  UploadSection.jsx
